--- a/style.css
+++ b/style.css
@@ -63,9 +63,14 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  padding: 20px 40px;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.mb-3 {
+  margin-bottom: 0.1rem!important;
 }
